--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.3.11",
     "@langchain/openai": "^0.3.11",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.5",
