working prototype with password auth validation from front end

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "langchain": "^0.3.5",
     "neo4j-driver": "^5.26.0",
+    "node-fetch": "^2.7.0",
     "openai": "^4.70.2",
     "web-streams-polyfill": "^4.0.0"
   }
