--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.5",
+    "mongoose": "^8.8.1",
     "neo4j-driver": "^5.26.0",
     "node-fetch": "^2.7.0",
     "openai": "^4.70.2",
