--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "langchain": "^0.3.5",
     "mongoose": "^8.8.1",
     "neo4j-driver": "^5.26.0",
