--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "neo4j-driver": "^5.26.0",
     "node-fetch": "^2.7.0",
     "openai": "^4.70.2",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "web-streams-polyfill": "^4.0.0"
   }
 }
