WIP adding pinecone based lookup

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@langchain/community": "^0.3.11",
     "@langchain/openai": "^0.3.11",
+    "@pinecone-database/pinecone": "^4.1.0",
     "axios": "^1.7.9",
     "bolt11": "^1.4.1",
     "cors": "^2.8.5",
