--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ffmpeg": "^0.0.4",
     "langchain": "^0.3.5",
     "mongoose": "^8.8.1",
     "natural": "^8.0.1",
