--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "langchain": "^0.3.5",
     "mongoose": "^8.8.1",
     "natural": "^8.0.1",
