--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pinecone-database/pinecone": "^4.1.0",
     "axios": "^1.7.9",
     "bolt11": "^1.4.1",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
