--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "openai": "^4.70.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "wav": "^1.0.2",
     "web-streams-polyfill": "^4.0.0"
   }
 }
