--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "neo4j-driver": "^5.26.0",
     "node-fetch": "^2.7.0",
     "openai": "^4.70.2",
+    "sharp": "^0.33.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "wav": "^1.0.2",
