--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "natural": "^8.0.1",
     "neo4j-driver": "^5.26.0",
     "node-fetch": "^2.7.0",
+    "node-html-parser": "^7.0.1",
     "openai": "^4.70.2",
     "sharp": "^0.33.5",
     "sqlite": "^5.1.1",
