--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "uj21",
   "license": "ISC",
+  "overrides": {
+    "tar-fs": ">=2.1.3"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
