--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sqlite3": "^5.1.7",
     "twitter-api-v2": "^1.23.2",
     "wav": "^1.0.2",
-    "web-streams-polyfill": "^4.0.0"
+    "web-streams-polyfill": "^4.0.0",
+    "ws": "^8.18.3"
   }
 }
