--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-cron": "^4.0.5",
     "node-fetch": "^2.7.0",
     "node-html-parser": "^7.0.1",
+    "nostr-tools": "^2.16.2",
     "openai": "^4.70.2",
     "sharp": "^0.33.5",
     "sqlite": "^5.1.1",
