--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "twitter-api-v2": "^1.23.2",
+    "umap-js": "^1.4.0",
     "wav": "^1.0.2",
     "web-streams-polyfill": "^4.0.0",
     "ws": "^8.18.3"
