--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.1",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
@@ -44,7 +45,7 @@
     "openai": "^4.70.2",
     "sharp": "^0.33.5",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
+    "sqlite3": "^5.0.2",
     "twitter-api-v2": "^1.23.2",
     "umap-js": "^1.4.0",
     "wav": "^1.0.2",
