--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
-    "@langchain/community": "^0.3.11",
+    "@langchain/community": "^1.1.15",
     "@langchain/openai": "^0.3.11",
     "@pinecone-database/pinecone": "^4.1.0",
     "axios": "^1.7.9",
@@ -31,6 +31,7 @@
     "express-session": "^1.18.1",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
+    "jsonwebtoken": "^9.0.3",
     "langchain": "^0.3.5",
     "mongoose": "^8.8.1",
     "natural": "^8.0.1",
